--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Dakata's Blog
+title: Out of Curiosity
 email: dakatapetrov@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A mediocre blog where I try to improve my writing skills and thought process by expressing biased opinion on various topics like science, history, philosophy, sports and life in general. Just out of curiosity.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dakatapetrov.github.io" # the base hostname & protocol for your site
 github_username:    dakatapetrov
