--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: dakatapetrov@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A mediocre blog where I try to improve my writing skills and thought process by expressing biased opinion on various topics like science, history, philosophy, sports and life in general. Just out of curiosity.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://dakatapetrov.github.io" # the base hostname & protocol for your site
+url: "https://blog.ypetrov.name" # the base hostname & protocol for your site
 github_username:    dakatapetrov
 instagram_username: dakatapetrov
 twitter_username:   dakatapetrov
